deployment/spa.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: spa
  name: spa
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: spa
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spa
  name: spa
  namespace: default
spec:
  selector:
    matchLabels:
      app: spa
  template:
    metadata:
      labels:
        app: spa
    spec:
      containers:
      - image: localhost:5000/spa
        imagePullPolicy: Always
        name: spa
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
