deployment/ingresses.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: hasura.local
    http:
      paths:
      - backend:
          serviceName: hasura
          servicePort: 80
  - host: app.local
    http:
      paths:
      - path: /api/
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: spa
          servicePort: 80
